--- a/.github/workflows/UpProxy.yml
+++ b/.github/workflows/UpProxy.yml
@@ -10,8 +10,8 @@ on:
       - main
     paths:
       - ".github/workflows/UpProxy.js"  # 当此文件变动时触发
-  schedule:
-    - cron: "*/10 * * * *"  # 每10分钟运行一次
+  # schedule:
+  #   - cron: "*/10 * * * *"  # 每10分钟运行一次
   workflow_dispatch:       # 支持手动触发
 
 jobs:
